# keynote-mcp

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  env.example  glama.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  start_server.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml
examples/: basic_usage.py
skills/keynote-presentation/: SKILL.md
skills/keynote-presentation/references/: build-animation-reference.md  coordinate-reference.md  existing-presentation-guide.md  font-size-workaround.md  shape-and-styling.md  slide-templates.md  theme-reference.md  troubleshooting-and-limitations.md
src/: server.py
src/applescript/: content.applescript  export.applescript  slide.applescript
src/keynote_mcp/: __init__.py  __main__.py  server.py
src/keynote_mcp/applescript/: presentation.applescript
src/keynote_mcp/tools/: content.py  slide.py  unsplash.py
src/keynote_mcp/utils/: __init__.py  error_handler.py
src/tools/: content.py  export.py  presentation.py  slide.py  unsplash.py
src/utils/: applescript_runner.py
tests/: conftest.py
